--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         </ul>
     </nav>
 
-    <main class="scrollspy-example text-light" data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
+    <main class="scrollspy-example text-light" data-bs-spy="scroll" data-bs-target="#navbar-example2"
+        data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
 
         <section class="container img-bg" id="home">
             <div class="text-end pt-4">
@@ -89,27 +90,27 @@
                     color: black;
                     text-align: center;
                     margin-bottom: 5em;" data-aos="fade-down" data-aos-duration="1000">
-                Tanpa mengurangi rasa hormat. Kami mengundang <br>
-                Bapak/Ibu/Saudara/i serta kerabat sekalian untuk <br>
-                menghadiri acara pernikahan kami;
-            </p>
-            
-            <p data-aos="fade-right" data-aos-duration="1000">
-                <img src="assets/images/ratih.png" class="img-mempelai"> <br>
-                <span class="text-mempelai" data-aos="fade-down" data-aos-duration="1000">
-                    Ratih Swastika Permata, S.Des, M.Pd</span> <br>
-                <span style="
+                    Tanpa mengurangi rasa hormat. Kami mengundang <br>
+                    Bapak/Ibu/Saudara/i serta kerabat sekalian untuk <br>
+                    menghadiri acara pernikahan kami;
+                </p>
+
+                <p data-aos="fade-right" data-aos-duration="1000">
+                    <img src="assets/images/ratih.png" class="img-mempelai"> <br>
+                    <span class="text-mempelai" data-aos="fade-down" data-aos-duration="1000">
+                        Ratih Swastika Permata, S.Des, M.Pd</span> <br>
+                    <span style="
                 font-size: .7rem;
                 color: black;">Putri Sulung dari Bapak Karnadi dan Ibu Bariah</span>
-            </p>
-            <p data-aos="fade-left" data-aos-duration="2000">
-                <img src="assets/images/rahmat.png" class="img-mempelai"> <br>
-                <span class="text-mempelai" data-aos="fade-down" data-aos-duration="1000">
-                    Rahmat Sumantri, S.Kom</span> <br>
-                <span style="
+                </p>
+                <p data-aos="fade-left" data-aos-duration="2000">
+                    <img src="assets/images/rahmat.png" class="img-mempelai"> <br>
+                    <span class="text-mempelai" data-aos="fade-down" data-aos-duration="1000">
+                        Rahmat Sumantri, S.Kom</span> <br>
+                    <span style="
                 font-size: .7rem;
                 color: black;">Putra Bungsu dari Bapak Suganda (Alm) dan Ibu Siti Robiah</span>
-            </p>
+                </p>
         </section>
 
         <div class="container">
@@ -131,16 +132,20 @@
                     <div class="border rounded-pill shadow py-2 px-4 mx-2 mb-4">
                         <div class="row justify-content-center" data-waktu="2023-07-01 00:00:00" id="tampilan-waktu">
                             <div class="col-3 p-1">
-                                <h2 class="d-inline m-0 p-0" id="hari">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Hari</small>
+                                <h2 class="d-inline m-0 p-0" id="hari">0</h2><small
+                                    class="ms-1 me-0 my-0 p-0 d-inline">Hari</small>
                             </div>
                             <div class="col-3 p-1">
-                                <h2 class="d-inline m-0 p-0" id="jam">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Jam</small>
+                                <h2 class="d-inline m-0 p-0" id="jam">0</h2><small
+                                    class="ms-1 me-0 my-0 p-0 d-inline">Jam</small>
                             </div>
                             <div class="col-3 p-1">
-                                <h2 class="d-inline m-0 p-0" id="menit">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Menit</small>
+                                <h2 class="d-inline m-0 p-0" id="menit">0</h2><small
+                                    class="ms-1 me-0 my-0 p-0 d-inline">Menit</small>
                             </div>
                             <div class="col-3 p-1">
-                                <h2 class="d-inline m-0 p-0" id="detik">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Detik</small>
+                                <h2 class="d-inline m-0 p-0" id="detik">0</h2><small
+                                    class="ms-1 me-0 my-0 p-0 d-inline">Detik</small>
                             </div>
                         </div>
                     </div>
@@ -163,47 +168,60 @@
                     </div>
 
                     <div class="py-2" data-aos="fade-up" data-aos-duration="1500">
-                        <a href="https://goo.gl/maps/52Y4V2k4xt5g5USMA" target="_blank" class="btn btn-outline-dark btn-sm rounded-pill shadow-sm mb-2 px-3" style="color: #585252;">
+                        <a href="https://goo.gl/maps/52Y4V2k4xt5g5USMA" target="_blank"
+                            class="btn btn-outline-dark btn-sm rounded-pill shadow-sm mb-2 px-3"
+                            style="color: #585252;">
                             <i class="fa-solid fa-map-location-dot me-2"></i>Lihat Google Maps
                         </a>
                         <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem;">
                             <strong> SDN LOJI 2 KOTA BOGOR </strong> <br>
-                            Belakang komplek IPB, Jl. Meranti No.137, RT.04/RW.08, Loji, Kec. Bogor Barat, Jawa Barat 16117
+                            Belakang komplek IPB, Jl. Meranti No.137, RT.04/RW.08, Loji, Kec. Bogor Barat, Jawa Barat
+                            16117
                         </p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section style="background-color: #111111 !important; margin-top: -5px; margin-bottom: -5px;" id="galeri">
-            <div class="container pb-2 pt-4">
-                <div class="card-body border rounded-4 shadow p-3">
-                    <h1 class="font-estetik text-center py-3" data-aos="fade-down" data-aos-duration="1500" style="font-size: 2rem;">Galeri</h1>
+        <section class="container img-bg" id="love-story" data-aos="zoom-out" data-aos-offset="300"
+            data-aos-duration="2500" data-aos-easing="ease-in-sine"></section>
 
-                    <div id="carouselExampleIndicators" data-aos="fade-up" data-aos-duration="1500" class="carousel slide" data-bs-ride="carousel">
+        <section id="galeri">
+            <div class="container pb-2 pt-4">
+                <div class="card-body p-3">
+                    <h1 class="text-center py-3" data-aos="fade-down" data-aos-duration="1500"
+                        style="font-size: 3rem; font-family: 'SweetRomance'; color: #5f3d22;">Galeri</h1>
+
+                    <div id="carouselExampleIndicators" data-aos="fade-up" data-aos-duration="1500"
+                        class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
                         </div>
 
                         <div class="carousel-inner rounded-4">
                             <div class="carousel-item active">
-                                <img src="assets/images/galeri/1.webp" class="d-block w-100">
+                                <img src="assets/images/galeri/1.jpg" class="d-block w-100">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/images/galeri/2.webp" class="d-block w-100">
+                                <img src="assets/images/galeri/2.jpg" class="d-block w-100">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/images/galeri/3.webp" class="d-block w-100">
+                                <img src="assets/images/galeri/3.jpg" class="d-block w-100">
                             </div>
                         </div>
 
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
                         </button>
@@ -216,15 +234,16 @@
         <div class="container">
             <div class="py-4">
                 <div class="text-center">
-                    <h1 class="font-estetik mt-0 mb-3" style="font-size: 3rem;">Love Gift</h1>
-                    <p class="mb-1" style="font-size: 0.9rem;">
+                    <h1 class="font-estetik mt-0 mb-3" style="font-size: 3rem; font-family: 'SweetRomance' !important; color: #5f3d22 !important;">Love Gift</h1>
+                    <p class="mb-1" style="font-size: 0.9rem; color: #585252;">
                         Tanpa mengurangi rasa hormat, bagi anda yang ingin memberikan tanda kasih untuk kami,
                         dapat melalui :
                     </p>
 
                     <div class="overflow-x-hidden">
                         <div class="row justify-content-center">
-                            <div class="col-12 card-body border rounded-4 shadow p-3 m-3" style="max-width: 25rem;" data-aos="fade-down" data-aos-duration="1500">
+                            <div class="col-12 card-body p-3 m-3" style="max-width: 25rem;"
+                                data-aos="fade-down" data-aos-duration="1500">
                                 <img src="assets/images/qr.webp" class="img-fluid rounded" width="300" alt="qr">
                                 <p class="card-text bg-white mt-4 rounded-4">
                                     <img src="assets/images/qr2.webp" class="img-fluid rounded" width="400" alt="bni">
@@ -236,10 +255,10 @@
             </div>
         </div>
 
-        <section class="m-0 p-0" id="ucapan">
+        <section id="ucapan">
             <div class="container">
                 <div class="card-body border rounded-4 shadow p-3">
-                    <h1 class="font-estetik text-center mb-3" style="font-size: 3rem;">Ucapan & Doa</h1>
+                    <h1 class="font-estetik text-center mb-3" style="font-size: 3rem; font-family: 'SweetRomance' !important; color: #5f3d22 !important;">Ucapan & Doa</h1>
                     <input type="hidden" id="idbalasan">
                     <div class="mb-1" id="balasan"></div>
                     <div class="mb-3">
@@ -256,13 +275,16 @@
                     </div>
                     <div class="mb-3">
                         <label for="formpesan" class="form-label">Ucapan & Doa</label>
-                        <textarea class="form-control shadow-sm" id="formpesan" rows="4" placeholder="Tulis Ucapan & Doa"></textarea>
+                        <textarea class="form-control shadow-sm" id="formpesan" rows="4"
+                            placeholder="Tulis Ucapan & Doa"></textarea>
                     </div>
                     <div class="d-flex">
-                        <button class="flex-fill btn btn-danger btn-sm rounded-4 shadow m-1" style="display: none;" onclick="resetForm()" id="batal">
+                        <button class="flex-fill btn btn-danger btn-sm rounded-4 shadow m-1" style="display: none;"
+                            onclick="resetForm()" id="batal">
                             Batal<i class="fa-solid fa-xmark ms-1"></i>
                         </button>
-                        <button class="flex-fill btn btn-primary btn-sm rounded-4 shadow m-1" style="display: none;" onclick="kirimBalasan()" id="kirimbalasan">
+                        <button class="flex-fill btn btn-primary btn-sm rounded-4 shadow m-1" style="display: none;"
+                            onclick="kirimBalasan()" id="kirimbalasan">
                             Kirim<i class="fa-solid fa-paper-plane ms-1"></i>
                         </button>
                     </div>
@@ -273,11 +295,11 @@
                     </div>
                 </div>
 
-                <div class="rounded-4 mt-4 mb-2">
+                <div class="rounded-4 mt-4 mb-2" style="color: #585252;">
                     <div id="daftarucapan"></div>
                 </div>
 
-                <nav class="d-flex justify-content-center">
+                <nav class="d-flex justify-content-center" style="color: #585252;">
                     <ul class="pagination mb-0">
                         <li class="page-item disabled" id="previous">
                             <button class="page-link" onclick="pagination.previous(this)" aria-label="Previous">
@@ -294,19 +316,19 @@
             </div>
         </section>
 
-        <div style="background-color: #111111 !important; margin-top: -5px; padding-bottom: 4rem;">
-            <div class="container">
+        <div id="penutup">
+            <div class="container py-4" style="color: #585252;">
                 <div class="text-center">
                     <p style="font-size: 0.9rem;" class="pt-2 pb-1 px-2" data-aos="fade-up" data-aos-duration="1500">
                         Merupakan suatu kehormatan dan kebahagiaan bagi kami apabila, Bapak / Ibu / Saudara / i.
                         berkenan hadir untuk memberikan do'a restunya kami ucapkan terimakasih.
                     </p>
-                    <h1 class="font-estetik" data-aos="fade-up" data-aos-duration="2000">Wassalamualaikum Warahmatullahi Wabarakatuh</h1>
+                    
                     <hr class="mt-3 mb-2">
                     <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                         <div class="col-auto">
-                            <small class="text-light">
-                                Build with<i class="fa-solid fa-heart mx-1"></i>Rahmat&Ratih
+                            <small style="color: #585252; font-family: 'SweetRomance';">
+                                Build with <i class="fa-solid fa-heart mx-1"></i> Rahmat & Ratih
                             </small>
                         </div>
                     </div>
@@ -315,7 +337,8 @@
         </div>
     </main>
 
-    <button type="button" id="tombol-musik" style="display: none;" class="btn btn-light btn-sm rounded-circle btn-music" onclick="play(this)" data-status="true" data-url="assets/music/sound.mp3">
+    <button type="button" id="tombol-musik" style="display: none;" class="btn btn-light btn-sm rounded-circle btn-music"
+        onclick="play(this)" data-status="true" data-url="assets/music/sound.mp3">
         <i class="fa-solid fa-circle-pause"></i>
     </button>
 
@@ -328,7 +351,8 @@
                     <div class="text-center">
                         <div id="namatamu"></div>
                         <div class="cropper mb-4 mx-auto"></div>
-                        <button type="button" class="btn btn-light shadow rounded-4 mt-4" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="buka()">
+                        <button type="button" class="btn btn-light shadow rounded-4 mt-4" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal" onclick="buka()">
                             <i class="fa-solid fa-envelope-open me-2"></i>Buka Undangan
                         </button>
                     </div>
