--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </p>
 
                 <p data-aos="fade-right" data-aos-duration="1000">
-                    <img src="assets/images/ratih.png" class="img-mempelai"> <br>
+                    <img src="assets/images/ratih.webp" class="img-mempelai"> <br>
                     <span class="text-mempelai" data-aos="fade-down" data-aos-duration="1000">
                         Ratih Swastika Permata, S.Des, M.Pd</span> <br>
                     <span style="
@@ -104,7 +104,7 @@
                 color: black;">Putri Sulung dari Bapak Karnadi dan Ibu Bariah</span>
                 </p>
                 <p data-aos="fade-left" data-aos-duration="2000">
-                    <img src="assets/images/rahmat.png" class="img-mempelai"> <br>
+                    <img src="assets/images/rahmat.webp" class="img-mempelai"> <br>
                     <span class="text-mempelai" data-aos="fade-down" data-aos-duration="1000">
                         Rahmat Sumantri, S.Kom</span> <br>
                     <span style="
@@ -205,13 +205,13 @@
 
                         <div class="carousel-inner rounded-4">
                             <div class="carousel-item active">
-                                <img src="assets/images/galeri/1.jpg" class="d-block w-100">
+                                <img src="assets/images/galeri/1.webp" class="d-block w-100">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/images/galeri/2.jpg" class="d-block w-100">
+                                <img src="assets/images/galeri/2.webp" class="d-block w-100">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/images/galeri/3.jpg" class="d-block w-100">
+                                <img src="assets/images/galeri/3.webp" class="d-block w-100">
                             </div>
                         </div>
 
