--- a/index.html
+++ b/index.html
@@ -347,10 +347,17 @@
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-fullscreen m-0">
             <div class="modal-content modal-cover p-0">
-                <div class="d-flex justify-content-center align-items-center" style="height: 100vh !important;">
+                <div style="height: 100vh !important;">
+                    <div class="text-center" style="padding-top: 8em;">
+                        <span class="text-cover">Rahmat</span>
+                        <span class="text-cover px-4">&</span>
+                        <span class="text-cover me-3">Ratih</span>
+                    </div>
+                    <div class="text-center m-0">
+                        <span style="font-size: 1.2em; color: black; font-family: 'SweetRomance'; letter-spacing: .2em; margin-left: 1em;">Dear</span>
+                    </div>
                     <div class="text-center">
                         <div id="namatamu"></div>
-                        <div class="cropper mb-4 mx-auto"></div>
                         <button type="button" class="btn btn-light shadow rounded-4 mt-4" data-bs-toggle="modal"
                             data-bs-target="#exampleModal" onclick="buka()">
                             <i class="fa-solid fa-envelope-open me-2"></i>Buka Undangan
