--- a/index.html
+++ b/index.html
@@ -348,15 +348,15 @@
         <div class="modal-dialog modal-dialog-centered modal-fullscreen m-0">
             <div class="modal-content modal-cover p-0">
                 <div style="height: 100vh !important;">
-                    <div class="text-center" style="padding-top: 8em;">
+                    <div class="text-center" style="margin-top: 10em;">
                         <span class="text-cover">Rahmat</span>
                         <span class="text-cover px-4">&</span>
                         <span class="text-cover me-3">Ratih</span>
                     </div>
-                    <div class="text-center m-0">
+                    <div class="text-center">
                         <span style="font-size: 1.2em; color: black; font-family: 'SweetRomance'; letter-spacing: .2em; margin-left: 1em;">Dear</span>
                     </div>
-                    <div class="text-center">
+                    <div class="text-center" style="margin-top: -1em;">
                         <div id="namatamu"></div>
                         <button type="button" class="btn btn-light shadow rounded-4 mt-4" data-bs-toggle="modal"
                             data-bs-target="#exampleModal" onclick="buka()">
