--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         style="font-size: 3rem; font-family: 'SweetRomance'; color: #5f3d22;">Galeri</h1>
 
                     <div id="carouselExampleIndicators" data-aos="fade-up" data-aos-duration="1500"
-                        class="carousel slide" data-bs-ride="carousel">
+                        class="carousel slide img-galery" data-bs-ride="carousel" style="margin-left: auto; margin-right: auto;">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                                 class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -205,13 +205,13 @@
 
                         <div class="carousel-inner rounded-4">
                             <div class="carousel-item active">
-                                <img src="assets/images/galeri/1.webp" class="d-block w-100">
+                                <img src="assets/images/galeri/1.webp" class="d-block img-galery">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/images/galeri/2.webp" class="d-block w-100">
+                                <img src="assets/images/galeri/2.webp" class="d-block img-galery">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/images/galeri/3.webp" class="d-block w-100">
+                                <img src="assets/images/galeri/3.webp" class="d-block img-galery">
                             </div>
                         </div>
 
