--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <main class="scrollspy-example text-light" data-bs-spy="scroll" data-bs-target="#navbar-example2"
         data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0" style="overflow-x: hidden;">
 
-        <section class="img-bg" id="home">
-            <div class="text-end pt-4">
+        <section class="img-bg d-mobile" id="home">
+            <div class="text-end pt-4 pe-2">
                 <p style="
                     font-size: .7rem;
                     color: #585252;" data-aos="fade-left" data-aos-duration="500">
@@ -65,7 +65,7 @@
                     untuk menghadiri perayaan cinta
                 </p>
             </div>
-            <div class="text-end pe-2 pt-5">
+            <div class="text-end pe-4 pt-5">
                 <div class="text-home" data-aos="fade-left" data-aos-duration="1000">
                     Rahmat </div>
                 <div class="text-home" style="color: #585252;" data-aos="fade-left" data-aos-duration="1500">
@@ -83,7 +83,34 @@
             </div>
         </section>
 
-        <section class="container img-bg" id="mempelai">
+        <section class="img-bg d-web" id="home">
+            <div class="text-start pt-5 ps-2">
+                <p style="
+                    font-size: 1em;
+                    color: #585252;" data-aos="fade-right" data-aos-duration="500">
+                    Dengan hati yang berbahagia, kami mengundang anda<br>
+                    untuk menghadiri perayaan cinta
+                </p>
+            </div>
+            <div class="text-start pt-5 ps-4">
+                <div class="text-home" data-aos="fade-right" data-aos-duration="1000">
+                    Rahmat </div>
+                <div class="text-home" style="color: #585252;" data-aos="fade-right" data-aos-duration="1500">
+                    & </div>
+                <div class="text-home" data-aos="fade-right" data-aos-duration="2000">
+                    Ratih </div>
+                <div style="
+                font-size: 2em; 
+                color: #585252; 
+                margin-top: .7em;
+                letter-spacing: .5em;
+                font-weight: bold;" data-aos="fade-right" data-aos-duration="2500">
+                    01.07.23 </div>
+
+            </div>
+        </section>
+
+        <section class="d-mobile img-bg" id="mempelai">
             <div class="text-center">
                 <p style="
                     font-size: .8rem;
@@ -112,6 +139,8 @@
                 color: black;">Putra Bungsu dari Bapak Suganda (Alm) dan Ibu Siti Robiah</span>
                 </p>
         </section>
+
+        <section class="d-web img-bg" id="mempelai"></section>
 
         <div class="container">
             <div class="text-center text-arrum py-4">
@@ -183,8 +212,113 @@
             </div>
         </section>
 
-        <section class="container img-bg" id="love-story" data-aos="zoom-out" data-aos-offset="300"
-            data-aos-duration="2500" data-aos-easing="ease-in-sine"></section>
+        <section class="d-web img-bg" id="love-story">
+            <div class="text-center pt-5">
+                <p data-aos="fade-up" data-aos-duration="500" style="font-family: 'SweetRomance';
+                color: #5f3d22;
+                font-size: 2em;">
+                    Love Story
+                </p>
+            </div>
+            <div class="text-center pt-2">
+                <p data-aos="fade-up" data-aos-duration="500" style="
+                color: black;
+                font-size: 1em;
+                text-decoration: underline;">
+                    AWAL BERTEMU - AKHIR 2020
+                </p>
+                <p data-aos="fade-up" data-aos-duration="500" style="
+                color: #585252;
+                font-size: 1em;">
+                    Dipertemukan pada project yang sama, <br> membawa kami saling mengenal satu sama lain
+                </p>
+                <img src="assets/images/panah-cinta.webp" width="50px" data-aos="fade-up" data-aos-duration="750">
+            </div>
+            <div class="text-center pt-2">
+                <p data-aos="fade-up" data-aos-duration="1000" style="
+                color: black;
+                font-size: 1em;
+                text-decoration: underline;">
+                    LAMARAN - MARET 2023
+                </p>
+                <p data-aos="fade-up" data-aos-duration="1000" style="
+                color: #585252;
+                font-size: 1em;">
+                Rahmat menyatakan keseriusan <br> dan meminta restu kepada kedua <br> orang tua ratih
+                </p>
+                <img src="assets/images/panah-cinta.webp" width="50px" data-aos="fade-up" data-aos-duration="1250">
+            </div>
+            <div class="text-center pt-2">
+                <p data-aos="fade-up" data-aos-duration="1500" style="
+                color: black;
+                font-size: 1em;
+                text-decoration: underline;">
+                    MENIKAH - JULI 2023
+                </p>
+                <p data-aos="fade-up" data-aos-duration="1500" style="
+                color: #585252;
+                font-size: 1em;">
+                    kami memantapkan hati untuk <br> berkomitmen dan memiliki tujuan <br> hidup bersama
+                </p>
+            </div>
+        </section>
+
+        <section class="d-mobile img-bg" id="love-story">
+            <div class="text-center" style="margin-top: 10em;">
+                <p data-aos="fade-up" data-aos-duration="500" style="font-family: 'SweetRomance';
+                color: #5f3d22;
+                font-size: 2em;">
+                    Love Story
+                </p>
+            </div>
+            <div class="text-center">
+                <p data-aos="fade-up" data-aos-duration="500" style="
+                color: black;
+                font-size: .7em;
+                text-decoration: underline;
+                margin-bottom: .3em;">
+                    AWAL BERTEMU - AKHIR 2020
+                </p>
+                <p data-aos="fade-up" data-aos-duration="500" style="
+                color: #585252;
+                font-size: .7em;
+                margin-bottom: .3em;">
+                    Dipertemukan pada project yang sama, <br> membawa kami saling mengenal satu sama lain
+                </p>
+                <img src="assets/images/panah-cinta.webp" width="40px" data-aos="fade-up" data-aos-duration="750">
+            </div>
+            <div class="text-center">
+                <p data-aos="fade-up" data-aos-duration="1000" style="
+                color: black;
+                font-size: .7em;
+                text-decoration: underline;
+                margin-bottom: .3em;">
+                    LAMARAN - MARET 2023
+                </p>
+                <p data-aos="fade-up" data-aos-duration="1000" style="
+                color: #585252;
+                font-size: .7em;
+                margin-bottom: .3em;">
+                Rahmat menyatakan keseriusan <br> dan meminta restu kepada kedua <br> orang tua ratih
+                </p>
+                <img src="assets/images/panah-cinta.webp" width="40px" data-aos="fade-up" data-aos-duration="1250">
+            </div>
+            <div class="text-center">
+                <p data-aos="fade-up" data-aos-duration="1500" style="
+                color: black;
+                font-size: .7em;
+                text-decoration: underline;
+                margin-bottom: .3em;">
+                    MENIKAH - JULI 2023
+                </p>
+                <p data-aos="fade-up" data-aos-duration="1500" style="
+                color: #585252;
+                font-size: .7em;
+                margin-bottom: .3em;">
+                    kami memantapkan hati untuk <br> berkomitmen dan memiliki tujuan <br> hidup bersama
+                </p>
+            </div>
+        </section>
 
         <section id="galeri">
             <div class="container pb-2 pt-4">
@@ -193,7 +327,8 @@
                         style="font-size: 3rem; font-family: 'SweetRomance'; color: #5f3d22;">Galeri</h1>
 
                     <div id="carouselExampleIndicators" data-aos="fade-up" data-aos-duration="1500"
-                        class="carousel slide img-galery" data-bs-ride="carousel" style="margin-left: auto; margin-right: auto;">
+                        class="carousel slide img-galery" data-bs-ride="carousel"
+                        style="margin-left: auto; margin-right: auto;">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                                 class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -234,7 +369,9 @@
         <div class="container">
             <div class="py-4">
                 <div class="text-center">
-                    <h1 class="font-estetik mt-0 mb-3" style="font-size: 3rem; font-family: 'SweetRomance' !important; color: #5f3d22 !important;">Love Gift</h1>
+                    <h1 class="font-estetik mt-0 mb-3"
+                        style="font-size: 3rem; font-family: 'SweetRomance' !important; color: #5f3d22 !important;">Love
+                        Gift</h1>
                     <p class="mb-1" style="font-size: 0.9rem; color: #585252;">
                         Tanpa mengurangi rasa hormat, bagi anda yang ingin memberikan tanda kasih untuk kami,
                         dapat melalui :
@@ -242,8 +379,8 @@
 
                     <div class="overflow-x-hidden">
                         <div class="row justify-content-center">
-                            <div class="col-12 card-body p-3 m-3" style="max-width: 25rem;"
-                                data-aos="fade-down" data-aos-duration="1500">
+                            <div class="col-12 card-body p-3 m-3" style="max-width: 25rem;" data-aos="fade-down"
+                                data-aos-duration="1500">
                                 <img src="assets/images/qr.webp" class="img-fluid rounded" width="300" alt="qr">
                                 <p class="card-text bg-white mt-4 rounded-4">
                                     <img src="assets/images/qr2.webp" class="img-fluid rounded" width="400" alt="bni">
@@ -258,7 +395,9 @@
         <section id="ucapan">
             <div class="container">
                 <div class="card-body border rounded-4 shadow p-3">
-                    <h1 class="font-estetik text-center mb-3" style="font-size: 3rem; font-family: 'SweetRomance' !important; color: #5f3d22 !important;">Ucapan & Doa</h1>
+                    <h1 class="font-estetik text-center mb-3"
+                        style="font-size: 3rem; font-family: 'SweetRomance' !important; color: #5f3d22 !important;">
+                        Ucapan & Doa</h1>
                     <input type="hidden" id="idbalasan">
                     <div class="mb-1" id="balasan"></div>
                     <div class="mb-3">
@@ -323,7 +462,7 @@
                         Merupakan suatu kehormatan dan kebahagiaan bagi kami apabila, Bapak / Ibu / Saudara / i.
                         berkenan hadir untuk memberikan do'a restunya kami ucapkan terimakasih.
                     </p>
-                    
+
                     <hr class="mt-3 mb-2">
                     <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                         <div class="col-auto">
