--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </section>
 
         <section class="d-web img-bg" id="love-story">
-            <div class="text-center pt-5">
+            <div class="text-center pt-2">
                 <p data-aos="fade-up" data-aos-duration="500" style="font-family: 'SweetRomance';
                 color: #5f3d22;
                 font-size: 2em;">
@@ -224,12 +224,14 @@
                 <p data-aos="fade-up" data-aos-duration="500" style="
                 color: black;
                 font-size: 1em;
-                text-decoration: underline;">
+                text-decoration: underline;
+                margin-bottom: 0px;">
                     AWAL BERTEMU - AKHIR 2020
                 </p>
                 <p data-aos="fade-up" data-aos-duration="500" style="
                 color: #585252;
-                font-size: 1em;">
+                font-size: 1em;
+                margin-bottom: 0px;">
                     Dipertemukan pada project yang sama, <br> membawa kami saling mengenal satu sama lain
                 </p>
                 <img src="assets/images/panah-cinta.webp" width="50px" data-aos="fade-up" data-aos-duration="750">
@@ -238,33 +240,37 @@
                 <p data-aos="fade-up" data-aos-duration="1000" style="
                 color: black;
                 font-size: 1em;
-                text-decoration: underline;">
+                text-decoration: underline;
+                margin-bottom: 0px;">
                     LAMARAN - MARET 2023
                 </p>
                 <p data-aos="fade-up" data-aos-duration="1000" style="
                 color: #585252;
-                font-size: 1em;">
+                font-size: 1em;
+                margin-bottom: 0px;">
                 Rahmat menyatakan keseriusan <br> dan meminta restu kepada kedua <br> orang tua ratih
                 </p>
                 <img src="assets/images/panah-cinta.webp" width="50px" data-aos="fade-up" data-aos-duration="1250">
             </div>
-            <div class="text-center pt-2">
+            <div class="text-center pt-3">
                 <p data-aos="fade-up" data-aos-duration="1500" style="
                 color: black;
                 font-size: 1em;
-                text-decoration: underline;">
+                text-decoration: underline;
+                margin-bottom: 0px;">
                     MENIKAH - JULI 2023
                 </p>
                 <p data-aos="fade-up" data-aos-duration="1500" style="
                 color: #585252;
-                font-size: 1em;">
+                font-size: 1em;
+                margin-bottom: 0px;">
                     kami memantapkan hati untuk <br> berkomitmen dan memiliki tujuan <br> hidup bersama
                 </p>
             </div>
         </section>
 
         <section class="d-mobile img-bg" id="love-story">
-            <div class="text-center" style="margin-top: 7em;">
+            <div class="text-center" style="margin-top: 8em;">
                 <p data-aos="fade-up" data-aos-duration="500" style="font-family: 'SweetRomance';
                 color: #5f3d22;
                 font-size: 2em;">
