--- a/index.html
+++ b/index.html
@@ -346,13 +346,13 @@
 
                         <div class="carousel-inner rounded-4">
                             <div class="carousel-item active">
-                                <img src="assets/images/galeri/1.webp" class="d-block w-100">
+                                <img src="assets/images/galeri/1.webp" class="d-block img-galery">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/images/galeri/2.webp" class="d-block w-100">
+                                <img src="assets/images/galeri/2.webp" class="d-block img-galery">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/images/galeri/3.webp" class="d-block w-100">
+                                <img src="assets/images/galeri/3.webp" class="d-block img-galery">
                             </div>
                         </div>
 
@@ -503,7 +503,7 @@
                     </div>
                     <div class="text-center" style="margin-top: -1em;">
                         <div id="namatamu"></div>
-                        <button type="button" class="btn btn-light shadow rounded-4 mt-4" data-bs-toggle="modal"
+                        <button type="button" class="btn btn-light shadow rounded-4 mt-3" data-bs-toggle="modal"
                             data-bs-target="#exampleModal" onclick="buka()">
                             <i class="fa-solid fa-envelope-open me-2"></i>Buka Undangan
                         </button>
