--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     untuk menghadiri perayaan cinta
                 </p>
             </div>
-            <div class="text-end pe-4 pt-5">
+            <div class="text-end pe-4 pt-3">
                 <div class="text-home" data-aos="fade-left" data-aos-duration="1000">
                     Rahmat </div>
                 <div class="text-home" style="color: #585252;" data-aos="fade-left" data-aos-duration="1500">
@@ -113,7 +113,7 @@
         <section class="d-mobile img-bg" id="mempelai">
             <div class="text-center">
                 <p style="
-                    font-size: .8rem;
+                    font-size: .7rem;
                     color: black;
                     text-align: center;
                     margin-bottom: 5em;" data-aos="fade-down" data-aos-duration="1000">
@@ -157,7 +157,7 @@
         <section id="tanggal">
             <div class="container">
                 <div class="text-center">
-                    <h1 style="font-size: 3rem; font-family:'SweetRomance'; color: #5f3d22;">Waktu Menuju Acara</h1>
+                    <h1 style="font-size: 2em; font-family:'SweetRomance'; color: #5f3d22;">Waktu Menuju Acara</h1>
                     <div class="border rounded-pill shadow py-2 px-4 mx-2 mb-4">
                         <div class="row justify-content-center" data-waktu="2023-07-01 00:00:00" id="tampilan-waktu">
                             <div class="col-3 p-1">
@@ -179,19 +179,19 @@
                         </div>
                     </div>
 
-                    <p style="font-size: 0.9rem;" class="mt-4 py-2">
+                    <p style="font-size: .7em;" class="mt-4 py-2">
                         Dengan memohon rahmat dan ridho Allah Subhanahu Wa Ta'ala, insyaAllah kami akan menyelenggarakan
                         acara :
                     </p>
 
                     <div class="overflow-x-hidden">
                         <div class="py-2" data-aos="fade-left" data-aos-duration="1500">
-                            <h1 style="font-size: 3rem; font-family:'SweetRomance'; color: #5f3d22;">Akad</h1>
+                            <h1 style="font-size: 2em; font-family:'SweetRomance'; color: #5f3d22;">Akad</h1>
                             <p>Pukul 09.00 WIB - Selesai</p>
                         </div>
 
                         <div class="py-2" data-aos="fade-right" data-aos-duration="1500">
-                            <h1 style="font-size: 3rem; font-family:'SweetRomance'; color: #5f3d22;">Resepsi</h1>
+                            <h1 style="font-size: 2em; font-family:'SweetRomance'; color: #5f3d22;">Resepsi</h1>
                             <p>Pukul 11.00 WIB - Selesai</p>
                         </div>
                     </div>
@@ -202,7 +202,7 @@
                             style="color: #585252;">
                             <i class="fa-solid fa-map-location-dot me-2"></i>Lihat Google Maps
                         </a>
-                        <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem;">
+                        <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.7em;">
                             <strong> SDN LOJI 2 KOTA BOGOR </strong> <br>
                             Belakang komplek IPB, Jl. Meranti No.137, RT.04/RW.08, Loji, Kec. Bogor Barat, Jawa Barat
                             16117
@@ -270,7 +270,7 @@
         </section>
 
         <section class="d-mobile img-bg" id="love-story">
-            <div class="text-center" style="margin-top: 8em;">
+            <div class="text-center" style="margin-top: 5em;">
                 <p data-aos="fade-up" data-aos-duration="500" style="font-family: 'SweetRomance';
                 color: #5f3d22;
                 font-size: 2em;">
@@ -291,7 +291,7 @@
                 margin-bottom: .3em;">
                     Dipertemukan pada project yang sama, <br> membawa kami saling mengenal satu sama lain
                 </p>
-                <img src="assets/images/panah-cinta.webp" width="40px" data-aos="fade-up" data-aos-duration="750">
+                <img src="assets/images/panah-cinta.webp" width="25px" data-aos="fade-up" data-aos-duration="750">
             </div>
             <div class="text-center">
                 <p data-aos="fade-up" data-aos-duration="1000" style="
@@ -307,7 +307,7 @@
                 margin-bottom: .3em;">
                 Rahmat menyatakan keseriusan <br> dan meminta restu kepada kedua <br> orang tua ratih
                 </p>
-                <img src="assets/images/panah-cinta.webp" width="40px" data-aos="fade-up" data-aos-duration="1250">
+                <img src="assets/images/panah-cinta.webp" width="25px" data-aos="fade-up" data-aos-duration="1250">
             </div>
             <div class="text-center">
                 <p data-aos="fade-up" data-aos-duration="1500" style="
@@ -327,10 +327,10 @@
         </section>
 
         <section id="galeri">
-            <div class="container pb-2 pt-4">
+            <div class="container pb-2">
                 <div class="card-body p-3">
                     <h1 class="text-center py-3" data-aos="fade-down" data-aos-duration="1500"
-                        style="font-size: 3rem; font-family: 'SweetRomance'; color: #5f3d22;">Galeri</h1>
+                        style="font-size: 2em; font-family: 'SweetRomance'; color: #5f3d22;">Galeri</h1>
 
                     <div id="carouselExampleIndicators" data-aos="fade-up" data-aos-duration="1500"
                         class="carousel slide img-galery" data-bs-ride="carousel"
@@ -376,9 +376,9 @@
             <div class="py-4">
                 <div class="text-center">
                     <h1 class="font-estetik mt-0 mb-3"
-                        style="font-size: 3rem; font-family: 'SweetRomance' !important; color: #5f3d22 !important;">Love
+                        style="font-size: 2em; font-family: 'SweetRomance' !important; color: #5f3d22 !important;">Love
                         Gift</h1>
-                    <p class="mb-1" style="font-size: 0.9rem; color: #585252;">
+                    <p class="mb-1" style="font-size: .7em; color: #585252;">
                         Tanpa mengurangi rasa hormat, bagi anda yang ingin memberikan tanda kasih untuk kami,
                         dapat melalui :
                     </p>
@@ -402,7 +402,7 @@
             <div class="container">
                 <div class="card-body border rounded-4 shadow p-3">
                     <h1 class="font-estetik text-center mb-3"
-                        style="font-size: 3rem; font-family: 'SweetRomance' !important; color: #5f3d22 !important;">
+                        style="font-size: 2em; font-family: 'SweetRomance' !important; color: #5f3d22 !important;">
                         Ucapan & Doa</h1>
                     <input type="hidden" id="idbalasan">
                     <div class="mb-1" id="balasan"></div>
@@ -464,7 +464,7 @@
         <div id="penutup">
             <div class="container py-4" style="color: #585252;">
                 <div class="text-center">
-                    <p style="font-size: 0.9rem;" class="pt-2 pb-1 px-2" data-aos="fade-up" data-aos-duration="1500">
+                    <p style="font-size: .7em;" class="pt-2 pb-1 px-2" data-aos="fade-up" data-aos-duration="1500">
                         Merupakan suatu kehormatan dan kebahagiaan bagi kami apabila, Bapak / Ibu / Saudara / i.
                         berkenan hadir untuk memberikan do'a restunya kami ucapkan terimakasih.
                     </p>
