--- a/index.html
+++ b/index.html
@@ -498,12 +498,9 @@
                         <span class="text-cover px-4">&</span>
                         <span class="text-cover me-3">Ratih</span>
                     </div>
-                    <div class="text-center">
-                        <span class="text-dear">Dear</span>
-                    </div>
                     <div class="text-center" style="margin-top: -1em;">
                         <div id="namatamu"></div>
-                        <button type="button" class="btn btn-light shadow rounded-4 mt-3" data-bs-toggle="modal"
+                        <button type="button" class="btn btn-light shadow rounded-4 mt-4" data-bs-toggle="modal"
                             data-bs-target="#exampleModal" onclick="buka()">
                             <i class="fa-solid fa-envelope-open me-2"></i>Buka Undangan
                         </button>
@@ -515,7 +512,7 @@
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/aos.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/app.min.js"></script>
 
     <script>
         $('[data-aos]').parent().addClass('hideOverflowOnMobile');
